# pinocchio-template

./: Cargo.toml
src/: lib.rs  types.rs
src/helpers/: bytes_helpers.rs  mod.rs
src/interface/instructions/: mod.rs  my_instruction.rs
src/processors/: mod.rs  something_processor.rs
src/states/: mod.rs  my_state.rs
